worked on app's login screen UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Ubuntu
+      fonts:
+        - asset: fonts/Ubuntu-Bold.ttf
+        - asset: fonts/Ubuntu-Italic.ttf
+          style: italic
+    - family: Quicksand
+      fonts:
+        - asset: fonts/Quicksand-Bold.ttf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
